[package]
name = "kg-template"
version = "0.1.3"
authors = ["Jakub Chłapiński <jakub.chlapinski@kodegenix.pl>"]
description = """
Template engine with syntax based on Apache Velocity
"""
readme = "README.md"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/Kodegenix/kg-template"
edition = "2018"

[workspace]

[dependencies]
kg-diag = "0.4.0"
kg-diag-derive = "0.4.0"
kg-display = "0.1.2"
kg-display-derive = "0.1.1"
kg-tree = "0.2.1"
kg-utils = "0.4.0"
serde = "1.0.116"
serde_derive = "1.0.116"
toml = "0.5.6"
